--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg_colour">#252424</color>
+    <color name="et_bg_colour">#434242</color>
+    <color name="bg_red_light">#F8655A</color>
+
 </resources>
