--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="bg_colour">#FFFFFFFF</color>
     <color name="et_bg_colour">#C6BCBC</color>
     <color name="bg_red_light">#F8655A</color>
+    <color name="bg_blue_light">#0080FF</color>
+    <color name="et_gray_color">#9C818181</color>
 
 
 </resources>
