--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,6 +12,7 @@
     <color name="bg_red_light">#F8655A</color>
     <color name="bg_blue_light">#0080FF</color>
     <color name="et_gray_color">#818181</color>
+    <color name="bg_black_trans">#34000000</color>
 
 
 </resources>
