login and registration validations added

--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -24,7 +24,11 @@
         android:id="@+id/registrationFragment"
         android:name="com.chamika.newsapptest.presentation.login.RegistrationFragment"
         android:label="fragment_registration"
-        tools:layout="@layout/fragment_registration" />
+        tools:layout="@layout/fragment_registration" >
+        <action
+            android:id="@+id/action_registrationFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
     <include app:graph="@navigation/dashboard_nav_graph" />
 
