--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,17 +28,17 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editTextLoginUsername"
+            android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginBottom="16dp"
             android:paddingStart="8dp"
             android:textStyle="bold"
-            android:hint="@string/tv_username"
+            android:hint="@string/tv_email"
             android:background="@drawable/et_bg_rounded"/>
 
         <EditText
-            android:id="@+id/editTextLoginPassword"
+            android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginBottom="16dp"
