--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_colour"
     tools:context=".presentation.dashboard.home.HomeFragment">
 
     <LinearLayout
@@ -72,7 +73,7 @@
                         android:layout_alignParentStart="true"
                         android:text="Latest News"
                         android:textSize="21sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/tv_color"
                         android:textStyle="bold"/>
 
                     <LinearLayout
@@ -111,7 +112,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvCategories"
                     android:layout_width="match_parent"
-                    android:layout_height="32dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="16dp"
                     tools:listitem="@layout/list_item_categories"/>
 
@@ -132,5 +133,12 @@
 
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/allNewsProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
 
 </FrameLayout>
