--- a/app/src/main/res/layout/list_item_top_headlines.xml
+++ b/app/src/main/res/layout/list_item_top_headlines.xml
@@ -4,16 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
-    android:layout_margin="4dp"
+    android:layout_height="230dp"
+    android:layout_marginEnd="35dp"
     app:cardCornerRadius="10dp"
     android:elevation="2dp"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_black_trans">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imgHeadNews"
@@ -22,6 +21,11 @@
             android:background="@android:drawable/ic_media_play"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_black_trans"/>
 
 
         <LinearLayout
