--- a/app/src/main/res/layout/list_item_categories.xml
+++ b/app/src/main/res/layout/list_item_categories.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_width="75dp"
-    android:layout_height="32dp"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="14dp"
-    android:elevation="2dp"
-    android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="32dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/gradient_background">
+    <androidx.cardview.widget.CardView
+        android:layout_width="75dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="10dp"
+        android:elevation="2dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="14dp">
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            tools:text="Healthy"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textSize="11sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_background">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                tools:text="Healthy" />
 
-</androidx.cardview.widget.CardView>
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+</RelativeLayout>
