--- a/app/src/main/res/layout/list_item_search_news.xml
+++ b/app/src/main/res/layout/list_item_search_news.xml
@@ -1,96 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="128dp"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="10dp"
-    android:elevation="2dp"
-    android:orientation="vertical">
+    android:layout_height="128dp">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_black_trans">
+        android:layout_height="128dp"
+        android:layout_marginBottom="8dp"
+        android:elevation="2dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="10dp">
 
-        <ImageView
-            android:id="@+id/imgHeadNews"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:drawable/ic_media_play"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvHeadline"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="5 things to know about the 'conundrum' of lupus"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
+            <ImageView
+                android:id="@+id/imgHeadNews"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:background="@android:drawable/ic_media_play"
+                android:scaleType="centerCrop" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/bg_black_trans" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:weightSum="2"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true">
 
             <TextView
-                android:id="@+id/tvAuthorName"
+                android:id="@+id/tvHeadline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”"
-                android:maxLines="1"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 android:ellipsize="end"
-                android:textSize="12sp"
-                android:layout_weight="1"
-                android:layout_marginEnd="10dp"
+                android:maxLines="1"
                 android:textColor="@color/white"
-                android:textStyle="normal"/>
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:text="5 things to know about the 'conundrum' of lupus" />
 
-            <TextView
-                android:id="@+id/tvNewsDescription"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:textSize="11sp"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:textStyle="normal"/>
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tvAuthorName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:textStyle="normal"
+                    tools:text="“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”" />
+
+                <TextView
+                    android:id="@+id/tvNewsDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    android:textStyle="normal"
+                    tools:text="“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
-
-
-        </LinearLayout>
-
-
-
-
-
-
-
-    </RelativeLayout>
-
-
-
-
-
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
