--- a/app/src/main/res/layout/list_item_top_headlines.xml
+++ b/app/src/main/res/layout/list_item_top_headlines.xml
@@ -1,93 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="230dp"
-    android:layout_marginEnd="35dp"
-    app:cardCornerRadius="10dp"
-    android:elevation="2dp"
-    android:orientation="vertical">
+    android:layout_height="230dp">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="230dp"
+        android:layout_marginEnd="10dp"
+        android:elevation="2dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="10dp">
 
-        <ImageView
-            android:id="@+id/imgHeadNews"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:drawable/ic_media_play"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_black_trans"/>
+            <ImageView
+                android:id="@+id/imgHeadNews"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:background="@android:drawable/ic_media_play"
+                android:scaleType="centerCrop" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/bg_black_trans" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_centerVertical="true">
-
-            <TextView
-                android:id="@+id/tvAuthorName"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                tools:text="by Ryan Browne"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                android:textStyle="normal"/>
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvAuthorName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="normal"
+                    tools:text="by Ryan Browne" />
+
+                <TextView
+                    android:id="@+id/tvHeadline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:textColor="@color/white"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    tools:text="Crypto investors should be prepared to lose all their money, BOE governor says" />
+
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/tvHeadline"
+                android:id="@+id/tvNewsDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
-                tools:text="Crypto investors should be prepared to lose all their money, BOE governor says"
-                android:maxLines="3"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:ellipsize="end"
-                android:textSize="21sp"
+                android:maxLines="2"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textSize="11sp"
+                android:textStyle="bold"
+                tools:text="“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”" />
 
 
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvNewsDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            tools:text="“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textSize="11sp"
-            android:layout_alignParentBottom="true"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
+        </RelativeLayout>
 
 
+    </androidx.cardview.widget.CardView>
 
-
-
-    </RelativeLayout>
-
-
-
-
-
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
