search api changes added

--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -6,8 +6,10 @@
     tools:context=".presentation.dashboard.favourite.FavouriteFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Favourite" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favourite"
+        android:textSize="25sp"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
