--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             android:weightSum="5">
 
             <EditText
-                android:id="@+id/editTextLoginPassword"
+                android:id="@+id/etSearch"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
@@ -30,7 +30,9 @@
                 android:hint="@string/tv_search_news"
                 android:textSize="16sp"
                 android:textColorHint="@color/et_gray_color"
-                android:inputType="textPassword"
+                android:textColor="@color/black"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
                 android:paddingStart="10dp"
                 android:paddingEnd="15dp" />
 
