--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextLoginPassword"
+                android:id="@+id/etSearch"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
@@ -29,7 +29,9 @@
                 android:hint="@string/tv_search_news"
                 android:textSize="16sp"
                 android:textColorHint="@color/et_gray_color"
-                android:inputType="textPassword"
+                android:textColor="@color/black"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
                 android:paddingStart="10dp"
                 android:paddingEnd="15dp" />
 
@@ -78,5 +80,13 @@
 
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/allNewsProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
+
 
 </FrameLayout>
