--- a/app/src/main/res/layout/list_item_categories.xml
+++ b/app/src/main/res/layout/list_item_categories.xml
@@ -10,14 +10,12 @@
         android:layout_width="75dp"
         android:layout_height="32dp"
         android:layout_marginEnd="10dp"
-        android:elevation="2dp"
-        android:orientation="vertical"
         app:cardCornerRadius="14dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/gradient_background">
+            android:background="@drawable/bg_outter">
 
             <TextView
                 android:id="@+id/tvName"
@@ -26,7 +24,7 @@
                 android:layout_centerInParent="true"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 tools:text="Healthy" />
