--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,12 +73,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
-                        android:text="Latest News"
+                        android:text="@string/tv_latest_news"
                         android:textSize="21sp"
                         android:textColor="@color/tv_color"
                         android:textStyle="bold"/>
 
                     <LinearLayout
+                        android:id="@+id/seeAllContainer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -88,7 +89,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:text="See All"
+                            android:text="@string/tv_see_all"
                             android:textSize="16sp"
                             android:textColor="@color/bg_blue_light"
                             android:textStyle="bold"/>
